[brain] some dark mode fixes

--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -52,8 +52,8 @@
     --ion-color-dark-rgb: 34, 34, 34;
     --ion-color-dark-contrast: #ffffff;
     --ion-color-dark-contrast-rgb: 255, 255, 255;
-    --ion-color-dark-shade: #1e2023;
-    --ion-color-dark-tint: #c2c2c2;
+    --ion-color-dark-shade: #ffffff;
+    --ion-color-dark-tint: #ffffff;
     --ion-color-dark-text: white;
   
     /** medium **/
